tests/Binder.txt
// One rule
x = "a"
----------
Rule x
  STRING "a" 97
==========
// One call action
x = "x" @1act
----------
Rule x
  And "x" @1act
    STRING "x" 120
    ACT @1act 0
==========
// Brackets
exp = (exp) END
END = 10
----------
Rule exp
  And (exp) END
    Id exp
    Id END
Rule END
  CHAR 10 10
==========
// Set with duplicate character
s = 'abcdefcghi'
----------
Error on line 2: set contains duplicate character
s = 'abcdefcghi'
    ^^^^^^^^^^^^
==========
// Number too big
m = 1114111
n = 1114112
----------
Error on line 3: number too big
n = 1114112
    ^^^^^^^
==========
// Number too big
m = 010ffff
n = 0110000
----------
Error on line 3: number too big
n = 0110000
    ^^^^^^^
==========
// Unicode supplementary characters (beyond 16 bits), 195101 = last letter.
char = "\195101"
x = "x"
----------
Rule char
  STRING "\195101" 195101
Rule x
  STRING "x" 120
==========
// Bad range
s = 'ab'..'c'
----------
Error on line 2: expecting single character
s = 'ab'..'c'
    ^^^^
==========
// Bad range
s = 'a'..'bc'
----------
Error on line 2: expecting single character
s = 'a'..'bc'
         ^^^^
==========
// Bad range
s = ''..'a'
----------
Error on line 2: expecting single character
s = ''..'a'
    ^^
==========
// Bad range
s = 'a'..''
----------
Error on line 2: expecting single character
s = 'a'..''
         ^^
==========
// Bad range
s = 'b'..'a'
----------
Error on line 2: empty range
s = 'b'..'a'
    ^^^^^^^^
==========
// Bad range
s = 33..32
----------
Error on line 2: empty range
s = 33..32
    ^^^^^^
==========
// Just OK range
s = 33..33
----------
Rule s
  RANGE 33..33
    CHAR 33 33
    CHAR 33 33
==========
// Name clash
x = @2add @3add
----------
Error on line 2: clashes with @2add
x = @2add @3add
          ^^^^^
==========
// Complete scanner/parser grammar for sums
exp = term ("+" term @2add / "-" term @2sub)* ''
term = factor ("*" factor @2mul / "/" factor @2div)*
factor = primary ("^" factor @2pow)?
primary = number / "(" exp ")"
number = digit+ @number
digit = '0123456789'
----------
Rule exp
  And term ("+" term @2add / "-" term @2sub)* ''
    Id term
    MANY ("+" term @2add / "-" term @2sub)*
      Or "+" term @2add / "-" term @2sub
        And "+" term @2add
          STRING "+" 43
          Id term
          ACT @2add 1
        And "-" term @2sub
          STRING "-" 45
          Id term
          ACT @2sub 2
    SET ''
Rule term
  And factor ("*" factor @2mul / "/" factor @2div)*
    Id factor
    MANY ("*" factor @2mul / "/" factor @2div)*
      Or "*" factor @2mul / "/" factor @2div
        And "*" factor @2mul
          STRING "*" 42
          Id factor
          ACT @2mul 3
        And "/" factor @2div
          STRING "/" 47
          Id factor
          ACT @2div 4
Rule factor
  And primary ("^" factor @2pow)?
    Id primary
    OPT ("^" factor @2pow)?
      And "^" factor @2pow
        STRING "^" 94
        Id factor
        ACT @2pow 5
Rule primary
  Or number / "(" exp ")"
    Id number
    And "(" exp ")"
      STRING "(" 40
      Id exp
      STRING ")" 41
Rule number
  And digit+ @number
    SOME digit+
      Id digit
    ACT @number 0
Rule digit
  SET '0123456789'
==========
// Unknown rule name
x = z
y = "a"
----------
Error on line 2: unknown name
x = z
    ^
==========
// Duplicate rule names
x = "x"
y = "y"
x = "z"
----------
Error on line 4: x is already defined
x = "z"
^
==========
// Example sum3.pecan
sum = number / number "+" number @2add
number = ('0123456789')+ @read
----------
Rule sum
  Or number / number "+" number @2add
    Id number
    And number "+" number @2add
      Id number
      STRING "+" 43
      Id number
      ACT @2add 1
Rule number
  And ('0123456789')+ @read
    SOME ('0123456789')+
      SET '0123456789'
    ACT @read 0
==========
// Error handling
string = '"' visible* #badstring '"'
visible = "x"
----------
Rule string
  And '"' visible* #badstring '"'
    SET '"' 34
    MANY visible*
      Id visible
    MARK #badstring 0
    SET '"' 34
Rule visible
  STRING "x" 120
==========
// Unicode category
upper = Lu
----------
Rule upper
  CAT Lu 2
==========
// Attempt to redefine category
Lu = 'x'
----------
Error on line 2: Lu is a unicode id
Lu = 'x'
^^
==========
// Number too big
big = 1114112
----------
Error on line 2: number too big
big = 1114112
      ^^^^^^^
==========
// Complete scanner for pecan itself
tokens = skip token*
token = id / number / set / string / matcher / action / handler / key / bad
id = name @Id skip1
number = ('0' hex* / digit+) @CHAR skip1
set = "'" ("'"! visible)* #BADSET "'" @SET skip1
string = '"' ('"'! visible)* #BADSTRING '"' @STRING skip1
matcher = "%" name @MATCH skip1
action = "@" (digit+ name @ACT / name @READ / @DROP) skip1
handler = "#" name @HAndLE skip1
key = prefix skip2 / infix skip2 / postfix skip1
prefix = "(" @RB / "[" @SB / "<" @AB
infix = "=" @Id / "/" @SL / ".." @DD
postfix = "!" @EM / "?" @QM / "+" @PL / "*" @ST / ")" @RE / "]" @SE / ">" @AE
bad =  #BADSET Uc skip1
skip = (space / comment / newline)* @
skip1 = space @ (newline ([space (letter / newline)] @NL)? skip)?
skip2 = space (newline space)? @
name = letter alpha*
hex = digit / 'A'..'F' / 'a'..'f'
digit = '0'..'9'
letter = 'A'..'Z' / 'a'..'z'
alpha = letter / digit / '_-'
newline = 10 / 133 / 8232 / 13 10 / 13 133 / 13
visible = ' '..'~'
comment = "//" visible*
space = " "*
----------
Rule tokens
  And skip token*
    Id skip
    MANY token*
      Id token
Rule token
  Or id / number / set / string / matcher / action / handler / key / bad
    Id id
    Id number
    Id set
    Id string
    Id matcher
    Id action
    Id handler
    Id key
    Id bad
Rule id
  And name @Id skip1
    Id name
    ACT @Id 0
    Id skip1
Rule number
  And ('0' hex* / digit+) @CHAR skip1
    Or '0' hex* / digit+
      And '0' hex*
        SET '0' 48
        MANY hex*
          Id hex
      SOME digit+
        Id digit
    ACT @CHAR 1
    Id skip1
Rule set
  And "'" ("'"! visible)* #BADSET "'" @SET skip1
    STRING "'" 39
    MANY ("'"! visible)*
      And "'"! visible
        NOT "'"!
          STRING "'" 39
        Id visible
    MARK #BADSET 0
    STRING "'" 39
    ACT @SET 2
    Id skip1
Rule string
  And '"' ('"'! visible)* #BADSTRING '"' @STRING skip1
    SET '"' 34
    MANY ('"'! visible)*
      And '"'! visible
        NOT '"'!
          SET '"' 34
        Id visible
    MARK #BADSTRING 1
    SET '"' 34
    ACT @STRING 3
    Id skip1
Rule matcher
  And "%" name @MATCH skip1
    STRING "%" 37
    Id name
    ACT @MATCH 4
    Id skip1
Rule action
  And "@" (digit+ name @ACT / name @READ / @DROP) skip1
    STRING "@" 64
    Or digit+ name @ACT / name @READ / @DROP
      And digit+ name @ACT
        SOME digit+
          Id digit
        Id name
        ACT @ACT 5
      And name @READ
        Id name
        ACT @READ 6
      ACT @DROP 7
    Id skip1
Rule handler
  And "#" name @HAndLE skip1
    STRING "#" 35
    Id name
    ACT @HAndLE 8
    Id skip1
Rule key
  Or prefix skip2 / infix skip2 / postfix skip1
    And prefix skip2
      Id prefix
      Id skip2
    And infix skip2
      Id infix
      Id skip2
    And postfix skip1
      Id postfix
      Id skip1
Rule prefix
  Or "(" @RB / "[" @SB / "<" @AB
    And "(" @RB
      STRING "(" 40
      ACT @RB 9
    And "[" @SB
      STRING "[" 91
      ACT @SB 10
    And "<" @AB
      STRING "<" 60
      ACT @AB 11
Rule infix
  Or "=" @Id / "/" @SL / ".." @DD
    And "=" @Id
      STRING "=" 61
      ACT @Id 0
    And "/" @SL
      STRING "/" 47
      ACT @SL 12
    And ".." @DD
      STRING ".."
      ACT @DD 13
Rule postfix
  Or "!" @EM / "?" @QM / "+" @PL / "*" @ST / ")" @RE / "]" @SE / ">" @AE
    And "!" @EM
      STRING "!" 33
      ACT @EM 14
    And "?" @QM
      STRING "?" 63
      ACT @QM 15
    And "+" @PL
      STRING "+" 43
      ACT @PL 16
    And "*" @ST
      STRING "*" 42
      ACT @ST 17
    And ")" @RE
      STRING ")" 41
      ACT @RE 18
    And "]" @SE
      STRING "]" 93
      ACT @SE 19
    And ">" @AE
      STRING ">" 62
      ACT @AE 20
Rule bad
  And #BADSET Uc skip1
    MARK #BADSET 0
    CAT Uc -268435457
    Id skip1
Rule skip
  And (space / comment / newline)* @
    MANY (space / comment / newline)*
      Or space / comment / newline
        Id space
        Id comment
        Id newline
    DROP @
Rule skip1
  And space @ (newline ([space (letter / newline)] @NL)? skip)?
    Id space
    DROP @
    OPT (newline ([space (letter / newline)] @NL)? skip)?
      And newline ([space (letter / newline)] @NL)? skip
        Id newline
        OPT ([space (letter / newline)] @NL)?
          And [space (letter / newline)] @NL
            TRY [space (letter / newline)]
              And space (letter / newline)
                Id space
                Or letter / newline
                  Id letter
                  Id newline
            ACT @NL 21
        Id skip
Rule skip2
  And space (newline space)? @
    Id space
    OPT (newline space)?
      And newline space
        Id newline
        Id space
    DROP @
Rule name
  And letter alpha*
    Id letter
    MANY alpha*
      Id alpha
Rule hex
  Or digit / 'A'..'F' / 'a'..'f'
    Id digit
    RANGE 'A'..'F'
      SET 'A' 65
      SET 'F' 70
    RANGE 'a'..'f'
      SET 'a' 97
      SET 'f' 102
Rule digit
  RANGE '0'..'9'
    SET '0' 48
    SET '9' 57
Rule letter
  Or 'A'..'Z' / 'a'..'z'
    RANGE 'A'..'Z'
      SET 'A' 65
      SET 'Z' 90
    RANGE 'a'..'z'
      SET 'a' 97
      SET 'z' 122
Rule alpha
  Or letter / digit / '_-'
    Id letter
    Id digit
    SET '_-'
Rule newline
  Or 10 / 133 / 8232 / 13 10 / 13 133 / 13
    CHAR 10 10
    CHAR 133 133
    CHAR 8232 8232
    And 13 10
      CHAR 13 13
      CHAR 10 10
    And 13 133
      CHAR 13 13
      CHAR 133 133
    CHAR 13 13
Rule visible
  RANGE ' '..'~'
    SET ' ' 32
    SET '~' 126
Rule comment
  And "//" visible*
    STRING "//"
    MANY visible*
      Id visible
Rule space
  MANY " "*
    STRING " " 32
